--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript">
 		jQuery(function($) {
 			
-			$('div').iepng();
+			$('div, img').iepng();
 			
 		});
 	</script>
