if..else to ternary operator

--- a/demo.html
+++ b/demo.html
@@ -9,13 +9,23 @@
 		jQuery(function($) {
 			
 			$('div, img').iepng();
-			
+
 		});
 	</script>
 </head>
 <body style="background:white">
 	<div style="background-image: url(test.png); width:500px; height:130px"></div>
+	<div style="background-image: url(test.png); width:500px; height:130px"></div>
+	<div style="background-image: url(test.png); width:500px; height:130px"></div>
+	<div style="background-image: url(test.png); width:500px; height:130px"></div>
+	<div style="background-image: url(test.png); width:500px; height:130px"></div>
+	<div style="background-image: url(test.png); width:500px; height:130px"></div>
 	
+	<p><img src="test.png" /></p>
+	<p><img src="test.png" /></p>
+	<p><img src="test.png" /></p>
+	<p><img src="test.png" /></p>
+	<p><img src="test.png" /></p>
 	<p><img src="test.png" /></p>
 </body>
 </html>
