--- a/demo.html
+++ b/demo.html
@@ -1,31 +1,28 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
-	<title>jquery.iepng</title>
-	<meta charset="UTF-8">
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-	<script type="text/javascript" src="jquery.iepng.js"></script>
-	<script type="text/javascript">
-		jQuery(function($) {
-			
-			$('div, img').iepng();
+    <title>jquery.iepng</title>
+    <meta charset="UTF-8">
+    <style type="text/css">
+        div {
+            background-image: url(test.png);
+            width:500px; 
+            height:130px;
+        }
+    </style>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="jquery.iepng.js"></script>
+    <script type="text/javascript">
+        jQuery(function($) {
+            
+            $('div, img').iepng();
 
-		});
-	</script>
+        });
+    </script>
 </head>
 <body style="background:white">
-	<div style="background-image: url(test.png); width:500px; height:130px"></div>
-	<div style="background-image: url(test.png); width:500px; height:130px"></div>
-	<div style="background-image: url(test.png); width:500px; height:130px"></div>
-	<div style="background-image: url(test.png); width:500px; height:130px"></div>
-	<div style="background-image: url(test.png); width:500px; height:130px"></div>
-	<div style="background-image: url(test.png); width:500px; height:130px"></div>
-	
-	<p><img src="test.png" /></p>
-	<p><img src="test.png" /></p>
-	<p><img src="test.png" /></p>
-	<p><img src="test.png" /></p>
-	<p><img src="test.png" /></p>
-	<p><img src="test.png" /></p>
+    <div></div>
+    
+    <p><img src="test.png" /></p>
 </body>
 </html>
